--- a/chatAgain/chatAgain.csproj
+++ b/chatAgain/chatAgain.csproj
@@ -95,6 +95,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="chat2.xaml.cs">
+      <DependentUpon>chat2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="chat3.xaml.cs">
+      <DependentUpon>chat3.xaml</DependentUpon>
+    </Compile>
     <Compile Include="chatPage.xaml.cs">
       <DependentUpon>chatPage.xaml</DependentUpon>
     </Compile>
@@ -114,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Projects for Accessbility-01.png" />
+    <Content Include="Assets\Projects for Accessbility-02.png" />
+    <Content Include="Assets\Projects for Accessbility-03.png" />
+    <Content Include="Assets\Projects for Accessbility-04.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -128,6 +137,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="chat2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="chat3.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="chatPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
