--- a/chatAgain/chatAgain.csproj
+++ b/chatAgain/chatAgain.csproj
@@ -111,6 +111,9 @@
       <DependentUpon>practicePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="qingjingmoni.xaml.cs">
+      <DependentUpon>qingjingmoni.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -123,6 +126,8 @@
     <Content Include="Assets\Projects for Accessbility-02.png" />
     <Content Include="Assets\Projects for Accessbility-03.png" />
     <Content Include="Assets\Projects for Accessbility-04.png" />
+    <Content Include="Assets\Projects for Accessbility-07.png" />
+    <Content Include="Assets\Projects for Accessbility-08.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -154,6 +159,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="practicePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="qingjingmoni.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
