add result and jiexi

--- a/chatAgain/chatAgain.csproj
+++ b/chatAgain/chatAgain.csproj
@@ -104,6 +104,9 @@
     <Compile Include="chatPage.xaml.cs">
       <DependentUpon>chatPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="jiexi.xaml.cs">
+      <DependentUpon>jiexi.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -116,6 +119,9 @@
     </Compile>
     <Compile Include="qingjingmoni.xaml.cs">
       <DependentUpon>qingjingmoni.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="result.xaml.cs">
+      <DependentUpon>result.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -134,6 +140,8 @@
     <Content Include="Assets\Projects for Accessbility-07.png" />
     <Content Include="Assets\Projects for Accessbility-08.png" />
     <Content Include="Assets\Projects for Accessbility-09.png" />
+    <Content Include="Assets\Projects for Accessbility-11.png" />
+    <Content Include="Assets\Projects for Accessbility-12.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -160,6 +168,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="jiexi.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -173,6 +185,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="qingjingmoni.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="result.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
