--- a/chatAgain/chatAgain.csproj
+++ b/chatAgain/chatAgain.csproj
@@ -150,6 +150,7 @@
     <Content Include="Assets\Projects for Accessbility-09.png" />
     <Content Include="Assets\Projects for Accessbility-11.png" />
     <Content Include="Assets\Projects for Accessbility-12.png" />
+    <Content Include="Assets\sound.mp3" />
     <Content Include="Assets\sound.PNG" />
     <Content Include="Assets\其他.png" />
     <Content Include="Assets\短句.png" />
